fix: cart component z-index

--- a/src/components/Header/Components/Cart/style.css
+++ b/src/components/Header/Components/Cart/style.css
@@ -12,6 +12,7 @@
     top: 0;
     right: -370px;
     transition-duration: 300ms;
+    z-index: 2;
     
     &.opened {
         right: 0;
